fix: center content and prevent typewriter text overflow

--- a/style.css
+++ b/style.css
@@ -39,16 +39,16 @@ body {
 }
 
 .subtitle {
-    position: absolute;
-    top: calc(50% + 100px);
-    left: 50%;
-    transform: translateX(-50%);
     font-size: 2rem;
     font-weight: 400;
     line-height: 40px;
-    min-height: 40px;
+    height: 80px;
     color: #d1e6f2;
     width: 90%;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .box {
@@ -87,11 +87,14 @@ body {
     }
 
     .subtitle {
-        top: calc(50dvh + 50px);
         font-size: 1.3rem;
         line-height: 25px;
-        min-height: 25px;
-        width: 90dvw;
+        height: 50px;
+        width: 90%;
+        overflow: hidden;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
     }
 
     .box {
